# arkham-card-maker

./: .gitignore  README.md  pyproject.toml
arkham_card_maker/: __init__.py  card.py  card_adapter.py  card_creator.py  compositor.py  engine.py  render_options.py  resource_manager.py  worker.py
arkham_card_maker/bleeding/: engine.py
arkham_card_maker/cli/: main.py
arkham_card_maker/compat/: workspace.py
arkham_card_maker/render/: __init__.py  renderer.py
docs/superpowers/plans/: 2026-04-25-render-engine-refactor-implementation.md
docs/superpowers/specs/: 2026-04-25-render-engine-refactor-design.md
scripts/: generate_all_type_comparison.py  stress_render_comparison.py
tests/: test_card_creator.py  test_cli.py  test_engine.py  test_export_pipeline.py  test_resource_manager.py  test_workspace_adapter.py
